--- a/overview/architecture-concepts/core-concepts-terminology.mdx
+++ b/overview/architecture-concepts/core-concepts-terminology.mdx
@@ -1,205 +1,217 @@
 ---
 title: "Core Concepts & Terminology"
-description: "Familiarize yourself with and quickly reference crucial terminology: tests, test cases, test fixtures, assertions, death tests, parameterized tests, mock objects, matchers, and cardinalities. Learn how these concepts shape how tests are written and interpreted in GoogleTest."
+description: "Master the essential concepts underpinning GoogleTest and GoogleMock, including what constitutes a test, assertion, mock, expectation, matcher, and cardinality. Demystify terms, clarify mental models, and link ideas directly to their manifestation in the codebase."
 ---
 
 # Core Concepts & Terminology
 
-Understanding the foundational terms and concepts in GoogleTest is essential for effectively writing, organizing, and interpreting your tests. This page familiarizes you with the key terminology you will encounter: tests, test cases, test fixtures, assertions, death tests, parameterized tests, mock objects, matchers, and cardinalities. Grasping these concepts will clarify how tests are structured and how GoogleTest works under the hood to verify your code behaves as expected.
+Master the essential concepts underpinning GoogleTest and GoogleMock, including what constitutes a test, assertion, mock, expectation, matcher, and cardinality. This guide demystifies key terms, clarifies mental models, and links these ideas directly to their manifestation in your code.
 
 ---
 
-## Tests and Test Cases
+## Introduction
 
-At the heart of GoogleTest are *tests*, which are organized collections of code designed to verify a particular aspect of your program.
+When you start working with GoogleTest and GoogleMock, encountering terms like "test", "mock", "assertion", "expectation", "matcher", and "cardinality" is inevitable. Understanding these foundational concepts is crucial to effectively designing, implementing, and maintaining robust tests.
 
-- **Test Case**: A logical grouping of related tests. It often corresponds to the component or feature under test.
-- **Test**: The smallest unit of testing, designed to verify one behavior or condition.
+This document unpacks these core notions, explains their meaning from the user's perspective, and provides clear examples to link them to your everyday testing code.
 
-GoogleTest encourages organizing your tests into these assemblies so you can systematically check your codebase by feature or module.
+---
 
-### Example
+## What Is a Test?
 
-Imagine you have a `Calculator` class:
+A **test** is a piece of code that verifies whether a small unit of your program (typically a function or a class) behaves as expected under certain conditions.
+
+- **How you create them:** By writing test functions that invoke your code and validate results using assertions.
+- **Why they matter:** They detect regressions, document expected behavior, and increase confidence in your software.
+
+Example:
 
 ```cpp
-TEST(CalculatorTest, AddsNumbers) {
-  Calculator calc;
-  EXPECT_EQ(calc.Add(2, 3), 5);
-}
-
-TEST(CalculatorTest, SubtractsNumbers) {
-  Calculator calc;
-  EXPECT_EQ(calc.Subtract(5, 3), 2);
+TEST(MyMathTest, AddsTwoIntegers) {
+  EXPECT_EQ(Add(1, 2), 3);
 }
 ```
 
-Here, `CalculatorTest` is the test case name grouping related tests, with each `TEST` macro defining an individual test.
+Here, `TEST` defines a test fixture named `MyMathTest` with the test case `AddsTwoIntegers`. The `EXPECT_EQ` is an assertion within that test.
 
-## Test Fixtures
-
-To avoid repeating common setup and cleanup code for multiple tests, GoogleTest provides *test fixtures*.
-
-A *test fixture* is a class that inherits from `::testing::Test` and contains:
-
-- Setup code executed before each test.
-- Common objects and variables used by multiple tests.
-- Cleanup code executed after each test.
-
-### Scenario
-
-Suppose multiple tests need to verify behaviors of a database connection:
-
-```cpp
-class DatabaseTest : public ::testing::Test {
- protected:
-  void SetUp() override {
-    db.Connect();
-  }
-  void TearDown() override {
-    db.Disconnect();
-  }
-  Database db;
-};
-
-TEST_F(DatabaseTest, QueryReturnsResults) {
-  EXPECT_TRUE(db.Query("SELECT * FROM users"));
-}
-
-TEST_F(DatabaseTest, InsertWorks) {
-  EXPECT_TRUE(db.Insert("INSERT INTO users VALUES ('Alice')"));
-}
-```
-
-Tests use `TEST_F` instead of `TEST` to run in the context of the fixture.
+---
 
 ## Assertions
 
-Assertions are the fundamental verification mechanism in tests. They check that specific conditions are true or false, and determine the test outcome.
+An **assertion** is a statement inside a test that verifies a condition or compares values.
 
-- Assertions such as `EXPECT_EQ`, `ASSERT_TRUE`, and `EXPECT_NE` verify expressions.
-- `EXPECT_` assertions continue test execution even if they fail, while `ASSERT_` assertions will abort the current test immediately upon failure.
-
-Careful use of assertions helps isolate failures and provide detailed feedback for debugging.
-
-## Death Tests
-
-Sometimes you want to verify that your program behaves correctly under fatal failure conditions (e.g., invalid inputs causing a program crash). GoogleTest supports *death tests* to handle this.
-
-- A death test runs a test in a separate process.
-- It checks that the tested code terminates or crashes (via `CHECK`, `assert`, or exceptions).
-- You specify the expected failure message pattern.
+- If an assertion fails, it indicates a problem with the code being tested (or the test itself).
+- GoogleTest offers multiple assertion macros like `EXPECT_EQ`, `ASSERT_TRUE`, `EXPECT_NE`, among others.
 
 Example:
 
 ```cpp
-TEST(SomeFatalTest, FailsOnInvalidInput) {
-  EXPECT_DEATH({ MyFunction(-1); }, "Invalid argument");
-}
-```
+EXPECT_EQ(result, expected_value);
+``` 
 
-These tests ensure your program fails safely and predictably.
+Here, the test expects `result` to equal `expected_value`. Failure reports are detailed and include the exact location.
 
-## Parameterized Tests
+---
 
-To test the same logic with multiple inputs, GoogleTest offers *parameterized tests*.
+## Mocks and Mock Objects
 
-- You define a test case that takes parameters.
-- You provide multiple input values.
-- GoogleTest automatically instantiates individual tests for each parameter.
+**Mock objects** are simulated versions of real objects used in tests to observe and control interactions.
 
-This approach avoids code duplication and ensures comprehensive coverage.
+- They implement the same interfaces as the real objects but enable you to specify and verify expected calls, argument values, call counts, and call order.
+- Created using GoogleMock with simple macros like `MOCK_METHOD` inside mock classes.
 
 Example:
 
 ```cpp
-class IsEvenTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(IsEvenTest, ReturnsTrueForEvenNumbers) {
-  int n = GetParam();
-  EXPECT_TRUE(IsEven(n));
-}
-
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, ::testing::Values(2, 4, 6, 8));
+class MockFoo : public FooInterface {
+ public:
+  MOCK_METHOD(int, Bar, (int x), (override));
+};
 ```
 
-## Mock Objects
+This defines a mock class `MockFoo` that can substitute any `FooInterface` implementation in your tests.
 
-When testing a module that depends on other components (e.g., databases, networks), it’s often impractical or slow to use the real dependencies. *Mock objects* simulate these dependencies.
+---
 
-- A mock object implements the same interface as the real object.
-- You program the mock with *expectations* specifying how it should be used.
-- The mock verifies if these expectations are met during test execution.
+## Expectations
 
-GoogleMock (gMock) is GoogleTest’s integrated framework for creating and managing mocks.
+An **expectation** states how many times and in what manner a mock method should be called.
+
+- Expressed with `EXPECT_CALL` on mock objects, these expectations specify details like the number of calls (`Times()`), argument matching (`Matchers`), call order (`InSequence`), and behavior (`WillOnce`, `WillRepeatedly`).
+- Expectations help detect incorrect interactions in the code under test.
+
+Example:
+
+```cpp
+EXPECT_CALL(mock_foo, Bar(5))
+    .Times(2)
+    .WillRepeatedly(Return(10));
+```
+
+This expects the `Bar` method on `mock_foo` to be called exactly twice with argument 5, returning 10 each time.
+
+---
 
 ## Matchers
 
-Matchers tell GoogleMock *what arguments* to expect on mock method calls.
+**Matchers** describe how to verify the values of function arguments when a mock method is called.
 
-- A matcher can specify exact values, ranges, wildcards, or complex predicates.
-- Built-in matchers include `_` (wildcard), `Eq()`, `Ge()` (greater or equal), `HasSubstr()`, and many more.
-- Combined matchers can be built using logical combinators like `AllOf()`, `AnyOf()`, and `Not()`.
+- They examine whether arguments meet certain criteria (e.g., equal to a value, greater than, matching a pattern).
+- Common matchers include `_` (wildcard), `Eq(value)`, `Ge(value)`, and many others.
 
 Example:
 
 ```cpp
-EXPECT_CALL(mock, SetValue(Ge(0)));  // Expect SetValue called with an argument >= 0
+EXPECT_CALL(mock_obj, Foo(Ge(5), _));
 ```
+
+Here, the first argument must be greater than or equal to 5, and the second argument can be anything.
+
+---
 
 ## Cardinalities
 
-Cardinalities define *how many times* a mock method is expected to be called.
+**Cardinality** defines the allowed number of times a mock method call is expected.
 
-You can specify them with `Times()` as part of an `EXPECT_CALL()`.
+- Passed as an argument to `Times()` in an expectation.
+- Indicates exact counts (`Exactly(n)` or simply `n`), ranges (`Between(m, n)`), or flexible bounds (`AtLeast(n)`, `AtMost(n)`, `AnyNumber()`).
 
-Common cardinalities:
+Example:
 
-- `Times(0)`: The method should never be called.
-- `Times(1)`: Called exactly once.
-- `AtLeast(n)`: Called at least *n* times.
-- `AtMost(n)`: Called at most *n* times.
-- `Between(m, n)`: Called between *m* and *n* times inclusive.
-- `AnyNumber()`: Called any number of times.
-
-Using correct cardinalities ensures your tests neither over- nor under-specify behavior, making them resilient and accurate.
+```cpp
+EXPECT_CALL(mock_obj, DoSomething())
+    .Times(AtLeast(1));
+```
+This expects `DoSomething()` to be called at least once.
 
 ---
 
-## How These Concepts Work Together
+## User Flow: From Understanding to Use
 
-Imagine a team developing a complex module. They'll write *test cases* grouping related tests that each perform clear assertions about the code’s behavior. When components depend on external resources or other modules, they'll replace them with *mock objects* created using gMock, which are programmed with *expectations* involving specific *matchers* and *cardinalities*. Some tests require validating behavior on invalid input, handled by *death tests*. For shared setup or teardown, *test fixtures* keep their code DRY and maintainable. For repetitive tests with varying inputs, *parameterized tests* ensure completeness.
+1. **Define interfaces** for your dependencies.
+2. **Create mock classes** deriving from those interfaces using `MOCK_METHOD`.
+3. **Set expectations** for mock calls with `EXPECT_CALL` specifying matchers, cardinalities, and actions.
+4. **Write tests** that exercise your code with mocks injected.
+5. **Validate outcomes** through test assertions and mock verifications.
 
-These core concepts form the backbone of GoogleTest’s power and flexibility.
+This progression helps isolate units, verify behavior, and write expressive, maintainable tests.
 
 ---
 
-## Summary Table of Key Terminology
+## Practical Examples
 
-| Term             | Description                                                                                     |
-|------------------|------------------------------------------------------------------------------------------------|
-| **Test case**    | A collection of related tests, typically for a module or class.                                |
-| **Test**         | A single test, verifying a specific behavior or outcome.                                       |
-| **Test fixture** | A class to set up common objects and state shared by multiple tests.                           |
-| **Assertion**    | A statement in a test that checks if a condition is true or false (e.g., `EXPECT_EQ`).        |
-| **Death test**   | A test that verifies the program’s behavior upon fatal errors/crashes.                         |
-| **Parameterized test** | A test that runs multiple times with different input values.                                |
-| **Mock object**  | A simulated dependency that verifies expected interactions with the code under test.          |
-| **Matcher**      | A predicate or pattern specifying expected arguments in mock calls.                           |
-| **Cardinality**  | Defines the expected number of times a mock method should be called (e.g., `Times(3)`).       |
+### Mocking a Class
+
+```cpp
+class Database {
+ public:
+  virtual bool Connect(const std::string& url) = 0;
+  virtual std::string Query(const std::string& sql) = 0;
+  virtual ~Database() {}
+};
+
+class MockDatabase : public Database {
+ public:
+  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
+  MOCK_METHOD(std::string, Query, (const std::string& sql), (override));
+};
+```
+
+### Setting Expectations with Matchers and Actions
+
+```cpp
+using ::testing::_;  // wildcard matcher
+using ::testing::Return;
+
+TEST(MyTest, DatabaseQuery) {
+  MockDatabase db;
+
+  EXPECT_CALL(db, Connect(_))
+      .WillOnce(Return(true));
+
+  EXPECT_CALL(db, Query("SELECT * FROM users"))
+      .WillOnce(Return("user_data"));
+
+  // Code using db goes here
+}
+```
+
+In this example, the `Connect` method is expected once with any argument, and the `Query` must be called with the exact string.
+
+---
+
+## Best Practices & Tips
+
+- Use **meaningful matchers** in expectations to avoid nonsense or brittle tests.
+- Employ **cardinalities** thoughtfully — too strict or too loose expectations harm test quality.
+- Prefer **`ON_CALL`** to setup common default mock behavior and `EXPECT_CALL` only when verifying specific calls to avoid over-specification.
+- When mocking overloaded methods, **use explicit typing** to avoid ambiguities.
+- Use **`NiceMock`** when you want to suppress warnings about uninteresting calls and **`StrictMock`** when you want them to be errors.
+- Organize expectations into **sequences** (`InSequence`) if order matters.
+
+---
+
+## Common Pitfalls
+
+- Forgetting to declare destructors as `virtual` in interfaces to be mocked.
+- Over-specifying expectations and matchers, making tests prone to break on refactors.
+- Not setting expectations on all mock calls used in the tests.
+- Misusing `EXPECT_CALL` and `ON_CALL` — remember `EXPECT_CALL` verifies calls, `ON_CALL` sets defaults without expectations.
+
+---
+
+## Related Documentation
+
+- [Writing Your First Test](/getting-started/first-test-experience/writing-your-first-test) — Learn to write your initial tests using GoogleTest.
+- [Mocking APIs](/api-reference/mocking-apis/mock-classes-methods) — Deep dive into mock class and method definitions.
+- [Setting Expectations and Actions](/api-reference/mocking-apis/mock-expectations-actions) — Detailed guide on how to specify and control mock behavior.
+- [Matchers for Arguments and Outcomes](/api-reference/matchers-actions/argument-matchers) — Comprehensive list and usage of matchers.
+- [The gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Practical recipes and recommendations for advanced mocking patterns.
 
 ---
 
 ## Next Steps
 
-With these concepts understood, you’re ready to dive deeper:
+Once you master these concepts, jump into writing and running your first tests, then gradually build expertise by exploring mocking techniques, advanced workflows, and integration tips.
 
-- Explore [Writing and Running Your First Test](/guides/getting-started/writing-your-first-test) to start coding tests.
-- Learn [Mock Objects and Methods](/api-reference/mocking-actions-matchers/mock-objects-and-methods) to build mocks effectively.
-- Understand [Matchers & Actions for Mocks](/api-reference/mocking-actions-matchers/matchers-actions) to utilize matchers and actions fully.
-
-For a guided introduction, see the [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) tutorial.
-
----
-
-
+Tap into this foundational knowledge to write more expressive, maintainable, and reliable tests with GoogleTest and GoogleMock.
