--- a/api-reference/core-testing-apis/assertions.mdx
+++ b/api-reference/core-testing-apis/assertions.mdx
@@ -1,249 +1,296 @@
 ---
-title: "Assertions and Expectations"
-description: "Comprehensive guide to built-in assertions (ASSERT_*, EXPECT_*) in GoogleTest, including success/failure semantics, custom failure messages, and rich diagnostics via AssertionResult. Covers fatal and non-fatal assertions as well as advanced scenarios like predicate assertions."
+title: "Assertions and Test Expectations"
+description: "Complete catalog of available assertion macros and expectation methods, covering both fatal and non-fatal assertions, value comparisons, exception checks, and rich diagnostics. Includes usage patterns and extension mechanisms for custom assertions."
 ---
 
-# Assertions and Expectations
+# Assertions and Test Expectations
 
-GoogleTest offers a comprehensive set of assertion macros to verify the correctness of your C++ code during testing. These assertions form the backbone of your test validations and report detailed diagnostics when tests fail.
+GoogleTest offers a comprehensive catalog of assertion macros that let you verify your code’s behavior precisely and effectively. This page describes all assertion variants including fatal and non-fatal assertions, value comparisons, string and exception checks, predicate formatters, and mechanisms to extend assertions for custom use cases. Understanding and using these assertions empowers you to write reliable tests that provide clear diagnostics and actionable feedback.
 
-## Understanding Assertion Semantics
+---
 
-GoogleTest assertions come primarily in pairs: `EXPECT_` and `ASSERT_` variants. Both verify a particular condition but differ in how they affect test execution:
+## 1. Assertion Overview
 
-- **`EXPECT_` assertions** generate **nonfatal failures** upon failure, allowing the current test function to continue executing. These are useful when you want to check multiple conditions even if one fails.
+Assertions in GoogleTest come in two flavors:
 
-- **`ASSERT_` assertions** generate **fatal failures** on failure, immediately aborting the current function. Use these when it makes no sense to proceed if the condition is not met.
+- **Fatal assertions (`ASSERT_` macros):** Abort the current function immediately upon failure, preventing further test code from executing.
+- **Non-fatal assertions (`EXPECT_` macros):** Report failures but continue running the test function, allowing multiple failures to be detected in a single run.
 
-You can attach custom failure messages to any assertion by streaming additional information with the `<<` operator, improving failure diagnosability.
+You choose fatal assertions when continuing does not make sense (e.g., dereferencing a null pointer), and non-fatal assertions when you want to report multiple validation points.
+
+All assertion macros support streaming of custom failure messages using `<<` for detailed, contextual diagnostics.
+
+Example:
 
 ```cpp
-EXPECT_TRUE(is_valid) << "Input validation failed";
-ASSERT_EQ(result, expected) << "Calculation result differs";
+ASSERT_EQ(x.size(), y.size()) << "Vectors differ in length";
+EXPECT_EQ(x[0], y[0]) << "Vectors differ at first element";
 ```
 
-If the message data is streamable to an `ostream` (including strings and wide strings), it will be included in the failure output.
+## 2. Types of Assertions
 
-## Explicit Success and Failure Assertions
+### 2.1 Explicit Success and Failure
 
-Sometimes, you want to explicitly indicate success or failure in your tests, beyond evaluating expressions.
+- `SUCCEED()` —  Signals an explicit success point.
+- `FAIL()` — Immediately generates a fatal failure and aborts the function.
+- `ADD_FAILURE()` — Reports a non-fatal failure, continuing test execution.
 
-### SUCCEED()
+Use `FAIL()` when you want to forcibly fail a test at a point you should never reach.
 
-- Generates an explicit success event.
-- Does NOT mark the overall test as passed by itself; a test passes only if no assertion fails throughout.
-- Mainly serves as a documentation aid or for future enhancement with visible success messages.
+### 2.2 Boolean Assertions
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` — Verify that a boolean condition is true.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` — Verify that a boolean condition is false.
+
+### 2.3 Equality and Relational Assertions
+
+- Equality check macros:
+  - `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` — Check `val1 == val2`.
+  - `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)` — Check `val1 != val2`.
+
+- Relational checks:
+  - `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)` — Check `val1 < val2`.
+  - `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)` — Check `val1 <= val2`.
+  - `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)` — Check `val1 > val2`.
+  - `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)` — Check `val1 >= val2`.
+
+Pointers are compared by address, so use string comparison macros for C strings.
+
+### 2.4 String Assertions
+
+GoogleTest provides string-specific assertions to check C strings and wide strings by content rather than pointer:
+
+- `EXPECT_STREQ(s1, s2)` / `ASSERT_STREQ(s1, s2)` — Contents are equal.
+- `EXPECT_STRNE(s1, s2)` / `ASSERT_STRNE(s1, s2)` — Contents differ.
+- `EXPECT_STRCASEEQ(s1, s2)` / `ASSERT_STRCASEEQ(s1, s2)` — Case-insensitive equality.
+- `EXPECT_STRCASENE(s1, s2)` / `ASSERT_STRCASENE(s1, s2)` — Case-insensitive inequality.
+
+Use these when comparing character string contents, especially with C-style strings.
+
+### 2.5 Floating-Point Comparison
+
+Due to precision and rounding issues, floating-point numbers require special handling.
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` — Approximate equality for `float`, within 4 ULPs.
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` — Approximate equality for `double`, within 4 ULPs.
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` — Within a specified absolute error threshold.
+
+These guards against false failures due to small floating-point inaccuracies.
+
+### 2.6 Exception Assertions
+
+Requires exceptions enabled in your build.
+
+- `EXPECT_THROW(statement, ExceptionType)` / `ASSERT_THROW(statement, ExceptionType)` — Verify that `statement` throws the specified exception.
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)` — Verify that `statement` throws any exception.
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)` — Verify that `statement` does not throw.
+
+Example:
 
 ```cpp
-SUCCEED() << "Checkpoint reached successfully";
+EXPECT_THROW(my_function(), std::runtime_error);
+ASSERT_NO_THROW(my_safe_function());
 ```
 
-### FAIL()
+### 2.7 Predicate Assertions
 
-- Generates a fatal failure, aborting the current function.
-- Can only be used in void-returning functions.
+Useful for testing complex conditions that do not fit simple macros. They allow using custom functions or predicate-formatters for clearer messages.
+
+- `EXPECT_PRED1(pred, val1)` ... `EXPECT_PRED5(pred, val1, val2, ... val5)` — Use a predicate function returning `bool` with 1 to 5 arguments.
+- `EXPECT_PRED_FORMAT1(pred_formatter, val1)` ... `EXPECT_PRED_FORMAT5(pred_formatter, val1, ...)` — Use a predicate-formatter returning an `AssertionResult`, allowing custom failure messages.
+
+Example:
 
 ```cpp
-if (unexpected_condition) {
-  FAIL() << "Unexpected error encountered";
+bool IsEven(int n) { return n % 2 == 0; }
+EXPECT_PRED1(IsEven, 4); // Passes
+EXPECT_PRED1(IsEven, 3); // Fails with argument value printed
+```
+
+### 2.8 Windows HRESULT Assertions
+
+Windows users can assert HRESULT values conveniently.
+
+- `EXPECT_HRESULT_SUCCEEDED(expression)` / `ASSERT_HRESULT_SUCCEEDED(expression)` — Verifies HRESULT success.
+- `EXPECT_HRESULT_FAILED(expression)` / `ASSERT_HRESULT_FAILED(expression)` — Verifies HRESULT failure.
+
+Provides detailed error messages with human-readable HRESULT codes.
+
+### 2.9 No-Fatal Failure Assertions
+
+Sometimes you want to assert that a statement doesn't generate fatal failures.
+
+- `EXPECT_NO_FATAL_FAILURE(statement)` / `ASSERT_NO_FATAL_FAILURE(statement)` — Succeeds if `statement` generates no fatal failures.
+
+Useful to ensure helper functions or code blocks don't cause fatal errors.
+
+## 3. Using Assertion Macros
+
+### 3.1 Syntax
+
+All assertions are macros usually prefixed with `EXPECT_` or `ASSERT_`. They accept one or more expressions.
+
+You can add custom failure messages using the output streaming operator `<<`:
+
+```cpp
+EXPECT_EQ(a, b) << "Mismatch where a does not equal b";
+```
+
+### 3.2 Selecting Between `EXPECT_` and `ASSERT_`
+
+- Use `EXPECT_` for checks where continuing after failure is safe and beneficial.
+- Use `ASSERT_` when continuing the test after failure is unsafe or meaningless.
+
+### 3.3 Evaluating Arguments Exactly Once
+
+All assertions guarantee that the arguments are evaluated exactly once, preventing side effects from causing misleading or multiple messages.
+
+### 3.4 Comparing Null Pointers
+
+For pointers, prefer comparing with `nullptr` instead of `NULL` or `0` for clarity.
+
+### 3.5 Streaming Wide Strings
+
+GoogleTest supports streaming wide (`wchar_t*` or `std::wstring`) strings correctly, translating output to UTF-8.
+
+### 3.6 Failure Message Details
+
+On failure, GoogleTest outputs:
+
+- The assertion expression.
+- The values of the compared arguments.
+- For equality failures, expected versus actual values with helpful diffs for strings.
+- Custom user message appended.
+
+## 4. Extending Assertions
+
+### 4.1 Writing Custom Assertion Macros
+
+If your tests require specialized validation, write custom assertion functions returning `testing::AssertionResult` objects, which can encapsulate success/failure and detailed messages.
+
+Example:
+
+```cpp
+testing::AssertionResult IsEven(int n) {
+  if (n % 2 == 0) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << n << " is odd";
 }
 ```
 
-### ADD_FAILURE()
-
-- Generates a nonfatal failure, allowing test execution to continue.
+Use with:
 
 ```cpp
-if (!CheckCondition()) {
-  ADD_FAILURE() << "Condition check failed";
-}
-```
-
-### ADD_FAILURE_AT(file, line)
-
-- Allows generating a nonfatal failure at a specified source code location.
-
-```cpp
-ADD_FAILURE_AT("foo.cc", 42) << "Issue at foo.cc:42";
-```
-
-## Assertions with Matchers: EXPECT_THAT
-
-GoogleTest supports matcher-based assertions that allow expressive and readable checks.
-
-```cpp
-EXPECT_THAT(value, StartsWith("Hello"));
-ASSERT_THAT(numbers, AllOf(HasSize(3), Contains(42)));
-```
-
-Matchers come from GoogleMock's matcher framework, providing rich, English-like syntax and detailed failure diagnostics.
-
-## Boolean Assertions
-
-Use these to verify simple Boolean conditions.
-
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
-
-Example:
-
-```cpp
-EXPECT_TRUE(user.IsAuthenticated()) << "User should be authenticated";
-ASSERT_FALSE(pointer == nullptr) << "Pointer must not be null";
-```
-
-## Binary Comparison Assertions
-
-Compare pairs of values using standard relational operators. Arguments are evaluated exactly once.
-
-| Macro       | Description                     |
-| ----------- | -------------------------------|
-| `EXPECT_EQ` / `ASSERT_EQ` | Verifies equality (`val1 == val2`)           |
-| `EXPECT_NE` / `ASSERT_NE` | Verifies inequality (`val1 != val2`)         |
-| `EXPECT_LT` / `ASSERT_LT` | Verifies less than (`val1 < val2`)            |
-| `EXPECT_LE` / `ASSERT_LE` | Verifies less or equal (`val1 <= val2`)       |
-| `EXPECT_GT` / `ASSERT_GT` | Verifies greater than (`val1 > val2`)         |
-| `EXPECT_GE` / `ASSERT_GE` | Verifies greater or equal (`val1 >= val2`)    |
-
-**Important:**
-- For pointer comparisons, `EXPECT_EQ` compares addresses, not pointed-to content.
-- For C strings, use string comparison macros instead to compare by content.
-
-Example:
-
-```cpp
-EXPECT_EQ(result.size(), expected.size()) << "Size mismatch";
-ASSERT_LT(index, vector.size()) << "Index out of bounds";
-```
-
-## String Comparison Assertions
-
-Special macros exist for comparing C strings (`const char*`) or wide C strings, taking care of null pointers and content differences:
-
-| Macro            | Description                              |
-| ---------------- | ----------------------------------------|
-| `EXPECT_STREQ` / `ASSERT_STREQ` | Strings are equal (content equality)       |
-| `EXPECT_STRNE` / `ASSERT_STRNE` | Strings are not equal                      |
-| `EXPECT_STRCASEEQ` / `ASSERT_STRCASEEQ` | Strings equal ignoring case                |
-| `EXPECT_STRCASENE` / `ASSERT_STRCASENE` | Strings different ignoring case            |
-
-Example:
-
-```cpp
-EXPECT_STREQ(actual_name, "John Doe") << "Unexpected name";
-ASSERT_STRNE(error_msg, nullptr) << "Error message should not be null";
-```
-
-## Floating-Point Comparisons
-
-Due to rounding errors, floating-point equality checks require special handling. GoogleTest offers floating-point specific assertions:
-
-- `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ`: Checks approximate equality of `float`s based on Units in the Last Place (ULPs).
-- `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ`: Same for `double`s.
-- `EXPECT_NEAR` / `ASSERT_NEAR(value1, value2, abs_error)`: Verifies values differ by no more than `abs_error`.
-
-Use these macros to avoid false positives in floating-point comparisons.
-
-Example:
-
-```cpp
-EXPECT_FLOAT_EQ(computed_value, expected_value);
-ASSERT_NEAR(measured, reference, 0.001) << "Value not within tolerance";
-```
-
-## Exception Assertions
-
-GoogleTest supports assertions that verify whether code throws exceptions. Exceptions must be enabled in your build.
-
-- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW`: Verifies statement throws the specified exception type.
-- `EXPECT_ANY_THROW` / `ASSERT_ANY_THROW`: Verifies statement throws any exception.
-- `EXPECT_NO_THROW` / `ASSERT_NO_THROW`: Verifies statement does not throw.
-
-Example:
-
-```cpp
-EXPECT_THROW(Divide(1, 0), std::invalid_argument);
-ASSERT_NO_THROW(ProcessInput(data));
-```
-
-## Predicate Assertions
-
-For sophisticated conditions that can't be expressed with built-in assertions, GoogleTest provides predicate assertions that print clearer failure messages with argument values.
-
-- `EXPECT_PRED1(pred, val1)` up to `EXPECT_PRED5` for predicates with multiple arguments.
-- Corresponding `EXPECT_PRED_FORMAT` and `ASSERT_PRED_FORMAT` macros allow customizing failure message formatting with predicate-formatters.
-
-Example:
-
-```cpp
-bool IsPrime(int n) { ... }
-EXPECT_PRED1(IsPrime, 7);
-
-using testing::AssertionResult;
-AssertionResult IsEven(int n) {
-  return (n % 2) == 0 ? testing::AssertionSuccess() : testing::AssertionFailure() << n << " is odd";
-}
 EXPECT_TRUE(IsEven(value));
 ```
 
-## Windows HRESULT Assertions
+### 4.2 Predicate-Formatter Assertions
 
-On Windows, GoogleTest can assert on `HRESULT` values, interpreting success/failure and reporting system error messages:
+Leverage `EXPECT_PRED_FORMAT*` macros to format failure messages with greatest control. This is helpful when the default message is too generic or when the predicate arguments cannot be streamed directly.
 
-- `EXPECT_HRESULT_SUCCEEDED(expr)` / `ASSERT_HRESULT_SUCCEEDED`: Checks HRESULT success.
-- `EXPECT_HRESULT_FAILED(expr)` / `ASSERT_HRESULT_FAILED`: Checks HRESULT failure.
+## 5. Best Practices & Common Pitfalls
 
-Example:
+- Prefer `EXPECT_` macros for most checks to maximize test feedback.
+- Use `ASSERT_` macros for critical preconditions to prevent subsequent undefined behavior.
+- Avoid fatal assertions in constructors or destructors to prevent partially constructed objects.
+- Use string comparison macros for C strings to avoid pointer equality checks.
+- Use floating-point comparison macros to handle precision subtleties.
+- Add custom failure messages to aid debugging and traceability.
+- Be mindful of the test’s control flow when using fatal assertions.
+- Utilize `SCOPED_TRACE` to add context to assertions within helper subroutines.
+- When handling exceptions, enable exceptions in your build and use the exception assertion macros.
 
-```cpp
-ASSERT_HRESULT_SUCCEEDED(CoCreateInstance(...));
-EXPECT_HRESULT_FAILED(someFunctionCall());
-```
+## 6. Examples
 
-## Death Assertions
-
-Death assertions verify that code causes the tested process to terminate due to fatal conditions.
-
-- `EXPECT_DEATH(statement, regex)` / `ASSERT_DEATH`: Verifies that `statement` causes process death and outputs stderr matching `regex`.
-- `EXPECT_DEATH_IF_SUPPORTED`, `EXPECT_DEBUG_DEATH`: Variants for platform or build-mode specific death tests.
-- `EXPECT_EXIT(statement, predicate, regex)` / `ASSERT_EXIT`: Verifies process terminates with exit status matching predicate and stderr matching regex.
-
-Example:
+### 6.1 Basic Assertions
 
 ```cpp
-ASSERT_DEATH(AbortIfBad(input), "Fatal error on invalid input");
-EXPECT_EXIT(NormalExit(), testing::ExitedWithCode(0), "Success");
+TEST(FactorialTest, Correctness) {
+  EXPECT_EQ(Factorial(0), 1);
+  EXPECT_EQ(Factorial(5), 120) << "Factorial calculation is incorrect";
+  ASSERT_GT(Factorial(3), 0);
+}
 ```
 
-### Best Practices for Using Assertions
+### 6.2 String Assertions
 
-- Prefer `EXPECT_` over `ASSERT_` when continuation after failure is safe and valuable.
-- Use assertion streaming (`<<`) to add context-specific failure details.
-- For complex conditions, use predicate assertions or matchers with `EXPECT_THAT` to get expressive messages.
-- Use string-specific assertions for C strings to avoid pointer-based comparisons.
-- For floating-point comparisons, always use floating-point assertions to avoid spurious failures due to precision.
+```cpp
+const char* actual = "Hello";
+EXPECT_STREQ("Hello", actual);
+EXPECT_STRNE("Hello", "World");
+EXPECT_STRCASEEQ("HELLO", "hello");
+EXPECT_STRCASENE("HELLO", "world");
+```
 
-### Common Pitfalls
+### 6.3 Floating-Point Assertions
 
-- Using `ASSERT_` in non-void functions causes compile errors due to function return omission.
-- Comparing C strings for content equality with `EXPECT_EQ` checks addresses, not content.
-- Forgetting to call `InitGoogleTest()` before `RUN_ALL_TESTS()` may cause flags to be ignored.
-- Using assertion macros that generate fatal failures in constructors or destructors is disallowed.
+```cpp
+float expected = 3.14f;
+float actual = 3.1415f;
+EXPECT_FLOAT_EQ(expected, actual);
+EXPECT_NEAR(expected, actual, 0.01f);
+```
 
-### Summary
+### 6.4 Exception Assertions
 
-GoogleTest's suite of assertions empowers you to write robust, clear, and maintainable tests. With built-in assertions for fundamental checks, advanced predicate and matcher assertions for complex validation, and support for exceptions, death tests, and Windows-specific HRESULT checks, you can cover a broad range of test scenarios. Using these effectively will greatly improve your test reliability and developer productivity.
+```cpp
+EXPECT_THROW(FunctionThatThrows(), std::runtime_error);
+ASSERT_NO_THROW(FunctionThatDoesNotThrow());
+```
+
+### 6.5 Custom Predicate
+
+```cpp
+testing::AssertionResult IsPositive(int n) {
+  if (n > 0) return testing::AssertionSuccess();
+  return testing::AssertionFailure() << n << " is not positive.";
+}
+EXPECT_TRUE(IsPositive(value));
+```
+
+## 7. Troubleshooting
+
+- **Assertion not firing?** Check that your test runs, and that the condition is properly evaluated.
+- **Unexpected test abort due to `ASSERT_`?** Use `EXPECT_` if you desire test continuation.
+- **Failure message unclear?** Use predicate-formatters or provide custom failure messages with streaming.
+- **Issues with string comparison?** Use the `STR*` macros for C strings explicitly.
+- **Floating-point failures when values appear close?** Use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR` instead of plain equality.
+
+## Additional Notes
+
+- All assertion macros are defined in `<gtest/gtest.h>`.
+- Assertions show the exact source file and line number on failure, with the failing expression.
+- Use `HasFatalFailure()`, `HasNonfatalFailure()`, and `HasFailure()` to programmatically detect test failure states inside your tests.
 
 ---
 
-<Info>
-For full API details, see the [Assertions Reference](reference/assertions.md).
-</Info>
+## References
 
-<Info>
-To learn advanced usage of predicates and custom failure messages, see [Advanced GoogleTest Topics](advanced.md#predicate-assertions-for-better-error-messages).
-</Info>
+- [GoogleTest Assertions Reference (official)](/docs/reference/assertions.md)
+- [GoogleTest Primer - Basic Concepts and ASSERT/EXPECT](../primer.md#assertions)
+- [Advanced Assertion Patterns and Predicate Assertions](../advanced.md#more-assertions)
+- [GoogleMock Matchers & Expectations](../api-reference/mocking-apis/mock-expectations-actions)
+- [Using SCOPED_TRACE for better diagnostic context](../advanced.md#adding-traces-to-assertions)
 
-<Info>
-See [Writing Your First Tests](guides/getting-started/writing-your-first-tests.mdx) for introductory tutorials using these assertions.
-</Info>
+
+---
+
+## Summary Diagram of Assertion Flow
+
+```mermaid
+flowchart TD
+  Start([Start Test]) --> CheckCode[Evaluate Assertion Condition]
+  CheckCode -->|True| Pass[Assertion Succeeds]
+  CheckCode -->|False| FailType{Is it Fatal?}
+  FailType -->|Yes| Abort[Abort Current Function]
+  FailType -->|No| Continue[Record Failure, Continue Test]
+  Pass --> Continue
+  Continue --> End([Test Continues or Ends])
+```
+
+---
+
+This completes the full API reference for GoogleTest’s assertions and test expectations, enabling you to verify program behavior across conditions, types, and scenarios with precision and clarity.
+
+---
+
+{/* End of Assertions and Test Expectations */}
